src/test/resources/type/good/function-call.ml
int func inc(int x, bool y, string z, double w) {
    return x + 1;
}

inc(5, true, "hello", 4); // should be valid, inc is a function that takes an int and returns an int

